--- a/server/languages/locale-en.json
+++ b/server/languages/locale-en.json
@@ -1,3 +1,8 @@
 {
-	"HELLO": "hello"
+	"SHARE YOUR WORK": "Share Your Work",
+	"LOGIN": "Login",
+	"SIGNUP": "Sign Up",
+	"ADMIN": "Admin",
+	"SEARCH": "Search",
+	"MYPROFILE": "My Profile"
 }
