profile and states

--- a/server/languages/locale-en.json
+++ b/server/languages/locale-en.json
@@ -4,5 +4,6 @@
 	"SIGNUP": "Sign Up",
 	"ADMIN": "Admin",
 	"SEARCH": "Search",
-	"MYPROFILE": "My Profile"
+	"MYPROFILE": "My Profile",
+	"SHAREYOURPROJECT": "Share Your Project"
 }
